--- a/templates/add.html
+++ b/templates/add.html
@@ -172,7 +172,8 @@
                         <div class="row form-group">
                             <div class="col-md-12">
                                 <label class="text-black" for="telefone">Telefone *</label>
-                                <input type="number" name="telefone" required class="input-medium bfh-phone form-control">
+                                <input type="number" maxlength="10" name="telefone" required
+                                       class="input-medium bfh-phone form-control">
 
                             </div>
                         </div>
@@ -191,8 +192,6 @@
                                  <input type="reset" value="Reset" class="btn btn-primary btn-md ml-2">
                             </div>
                         </div>
-
-
                     </form>
                 </div>
                 <div class="col-lg-5 ml-auto">
