--- a/templates/found.html
+++ b/templates/found.html
@@ -103,7 +103,7 @@
                             <span class="meta">{{ item.province }}</span>
                         </div>
                         <div class="col-md-3 text-md-right">
-                            <form method="POST" action=contact>
+                            <form method="POST" action=contactown>
                                 <button type="submit" name="email_to" value="{{ item.email }}"
                                         class="btn btn-primary btn-lg btn-block text-white"><span
                                         class="icon-contact_mail icon mr-2"></span>Contactar
