--- a/templates/found.html
+++ b/templates/found.html
@@ -96,7 +96,7 @@
                         </div>
                         <div class="col-md-4">
                             <span class="badge badge-primary px-2 py-1 mb-3">{{ item.type_item }}</span>
-                            <h2><a href="lost.html">{{ item.reference }}</a></h2>
+                            <h2><a href="#">{{ item.reference }}</a></h2>
                         </div>
                         <div class="col-md-3 text-left">
                             <h3>Cidade</h3>
