--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="pt">
 <head>
     <title>Perdidos e Achados Angola &mdash; developed by Kawakuticode</title>
     <meta charset="utf-8">
@@ -14,12 +13,10 @@
     <link rel="stylesheet" href="static/css/animate.min.css">
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-
 <body id="top">
 
 
 <div class="site-wrap">
-
     <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
             <div class="site-mobile-menu-close mt-3">
@@ -31,7 +28,6 @@
 
 
     <!-- NAVBAR -->
-    <!-- NAVBAR -->
     <header class="site-navbar mt-3">
         <div class="container-fluid">
             <div class="row align-items-center">
@@ -39,8 +35,8 @@
 
                 <nav class="mx-auto site-navigation">
                     <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
-                        <li><a href="{{ url_for('home') }}">Home</a></li>
-                        <li><a href="{{ url_for('lost') }}" class="nav-link active">Perdidos</a></li>
+                        <li><a href="{{ url_for('home') }}" class="nav-link active">Home</a></li>
+                        <li><a href="{{ url_for('lost') }}">Perdidos</a></li>
                         <li><a href="{{ url_for('found') }}">Achados</a></li>
                         <li><a href="{{ url_for('about') }}">Como funciona</a></li>
                         <li><a href="{{ url_for('add') }}">Anunciar</a></li>
@@ -50,7 +46,8 @@
 
                 <div class="right-cta-menu text-right d-flex aligin-items-center col-6">
                     <div class="ml-auto">
-                        <a href="{{ url_for('contact') }}" class="btn btn-primary border-width-2 d-none d-lg-inline-block"><span
+                        <a href="{{ url_for('contact') }}"
+                           class="btn btn-primary border-width-2 d-none d-lg-inline-block"><span
                                 class="mr-2 icon-paper-plane"></span>Contacte-nos</a>
                     </div>
                     <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block d-xl-none mt-lg-2 ml-3"><span
@@ -65,83 +62,95 @@
     <section class="section-hero overlay inner-page bg-image"
              style="background-image: url('/static/images/hero_1.jpg');"
              id="home-section">
-
         <div class="container">
             <div class="row align-items-center justify-content-center">
-                  <div class="col-md-12">
+                <div class="col-md-12">
                     <div class="mb-5 text-center">
-                        <h1 class="text-white font-weight-bold">Items Perdidos</h1>
-                        <p class="text-white" >Encontre na lista abaixo os teus pertences</p>
+                        <h1 class="text-white font-weight-bold">Oops!</h1>
+                        <h3 class="text-white">404 pagina nao encontrada</h3>
+                        <h3 class="text-white">pagina procurada deve ter sido removida ou temporariamente
+                            inacessivel</h3>
+                    </div>
+                    <div class="align-self-center  mb-lg-0">
+                        <button type="button" value="{{ url_for('home') }}"
+                                class="btn btn-primary btn-block text-white btn-search">
+                            <span class="icon-search icon mr-2"></span>retornar home-page
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
 
-
-    <section class="site-section">
-        <div class="container">
-            <div class="row mb-5 justify-content-center">
-                <div class="col-md-7 text-center">
-                    <h2 class="section-title mb-2">{{ items_perdidos|count }} Items </h2>
-                </div>
-            </div>
-            <div class="mb-5">
-                {% for item in items_perdidos %}
-                    <div class="row align-items-start job-item border-bottom pb-3 mb-3 pt-3">
-                        <div class="col-md-2">
-                            <a href="lost.html"><img src="static/images/featured-listing-1.jpg" alt="Image"
-                                                     class="img-fluid"></a>
-                        </div>
-                        <div class="col-md-4">
-                            <span class="badge badge-primary px-2 py-1 mb-3">{{ item.type_item }}</span>
-                            <h2><a href="#">{{ item.reference }}</a></h2>
-                        </div>
-                        <div class="col-md-3 text-left">
-                            <h3>Cidade</h3>
-                            <span class="meta">{{ item.province }}</span>
-                        </div>
-                        <div class="col-md-3 text-md-right">
-                            <h3></h3>
-                            <form method="POST" action=contact>
-                                <button type="submit" name="email_to" value="{{ item.email }}"
-                                        class="btn btn-primary btn-lg btn-block text-white"><span
-                                        class="icon-contact_mail icon mr-2"></span>Contactar
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-
-            <div class="row pagination-wrap">
-                <div class="col-md-6 text-center text-md-left">
-                    <div class="custom-pagination ml-auto">
-                        <a href="#" class="prev">Anterior</a>
-                        <div class="d-inline-block">
-                            <a href="#" class="active">1</a>
-                        </div>
-                        <a href="#" class="next">Proximo</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
     </section>
 
 
     <section class="py-5 bg-image overlay-primary fixed overlay"
              style="background-image: url('/static/images/hero_1.jpg');">
         <div class="container">
+            <div class="row mb-5 justify-content-center">
+                <div class="col-md-7 text-center">
+                    <h2 class="section-title mb-2 text-white">Estatisticas</h2>
+                    <p class="lead text-white">Estatistica sobre items perdidos e achados</p>
+                </div>
+            </div>
+            <div class="row pb-0 block__19738 section-counter">
+                <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="d-flex align-items-center justify-content-center mb-2">
+                        <strong class="number" data-number={{ lost|count }}>{{ lost|count }}</strong>
+                    </div>
+                    <span class="caption">Perdidos</span>
+                </div>
+
+                <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="d-flex align-items-center justify-content-center mb-2">
+                        <strong class="number" data-number={{ found|count }}>{{ found|count }}</strong>
+                    </div>
+                    <span class="caption">Achados</span>
+                </div>
+
+                <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="d-flex align-items-center justify-content-center mb-2">
+                        <strong class="number" data-number={{ docs|count }}>{{ docs|count }}</strong>
+                    </div>
+                    <span class="caption">Documentos</span>
+                </div>
+
+                <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="d-flex align-items-center justify-content-center mb-2">
+                        <strong class="number" data-number={{ others|count }}>{{ others|count }}</strong>
+                    </div>
+                    <span class="caption">Diversos</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="site-section py-4 mb-5 border-top">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 text-center mt-4 mb-5">
+                    <div class="row justify-content-center">
+                        <div class="col-md-7">
+                            <h2 class="section-title mb-2">Seja um bom cidadao!</h2>
+                            <p class="lead">Encontrou algo?Leve a esquadra mais proxima ou adicione a nossa pagina</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-5 bg-image overlay-primary fixed overlay"
+             style="background-image: url('/static/images/hero_1.jpg');">
+        <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <h2 class="text-white">Encontrou algo na via publica ? Esta listado no nosso website? </h2>
-                    <p class="mb-0 text-white lead">Adicione a nossa base de dados ou clique em contactar para informar
-                        o dono.
-                    </p>
+                    <h2 class="text-white">Perdeu algo ? Encontrou algo ?</h2>
+                    <p class="mb-0 text-white lead">anuncie aqui!!</p>
                 </div>
                 <div class="col-md-3 ml-auto">
-                    <a href="#" class="btn btn-warning btn-block btn-lg">Anunciar</a>
+                    <a href="{{ url_for('add') }}" class="btn btn-warning btn-block btn-lg">Anunciar</a>
                 </div>
             </div>
         </div>
@@ -214,10 +223,8 @@
 <script src="static/js/jquery.animateNumber.min.js"></script>
 <script src="static/js/owl.carousel.min.js"></script>
 
-
 <script src="static/js/custom.js"></script>
 
 
 </body>
-
 </html>
